# Zirconium

./: CMakeLists.txt  Zirconium.sln
DevelopmentTests/: BasicTest.cs  DevelopmentTests.csproj
DevelopmentTests/Resources/BasicTest/: Basic.zr  Consuming.zr
DevelopmentTests/Resources/GenericTest/: ConsumingGenericClass.zr  GenericClass.zr  HyperConsumingGenericClass.zr  SuperConsumingGenericClass.zr
Tests/: ClassTests.cs  Tests.csproj  Utilities.cs
Tests/Resources/: RealSimpleClass.zr
Zirconium/: CompilationError.cs  CompilationPassInfo.cs  CompilationWarning.cs  Program.cs  Zirconium.g4  ZirconiumErrorStrategy.cs
Zirconium/AST/: AbstractNode.cs  ClassConstructorNode.cs  ClassDestructorNode.cs  ClassFieldNode.cs  ClassFunctionNode.cs  ClassNode.cs  ClassPropertyNode.cs  FileNode.cs  IdentifierNode.cs  NameSpaceNode.cs  ParameterDeclarationNode.cs  ScopeNode.cs  TypeNode.cs
Zirconium/AST/Expressions/: AbstractExpressionNode.cs
Zirconium/AST/Statements/: BreakNode.cs  ContinueNode.cs  DeleteNode.cs  ForNode.cs  IfConstructNode.cs  IfNode.cs  InitializationNode.cs  ReturnNode.cs  StatementNode.cs  WhileNode.cs
Zirconium/Antlr/: Zirconium.interp  Zirconium.tokens  ZirconiumBaseVisitor.cs  ZirconiumLexer.cs  ZirconiumLexer.interp  ZirconiumParser.cs  ZirconiumVisitor.cs
Zirconium/Visitors/: ClassVisitor.cs  CompilableVisitor.cs  ExpressionVisitor.cs  ScopeVisitor.cs  StatementVisitor.cs
Zrc/: Zrc.csproj
Zrc/Antlr/: Zirconium.g4
Zrc/Util/: Accessible.cs  IFriendlyName.cs  IMangleable.cs
compiler/: Main.cpp
src/zr/: CompilerRunData.cpp  CompilerRunData.h  ProjectSettings.cpp  ProjectSettings.h  TextLocation.cpp  TextLocation.h
src/zr/Messages/: CompilerMessage.cpp  CompilerMessage.h
src/zr/Parsing/: Token.cpp  Token.h  TokenFinder.cpp  TokenFinder.h  TokenStream.cpp  TokenStream.h
tests/cpp/: CompileResult.cpp  CompileResult.h  TestingUtilities.cpp  TestingUtilities.h
tests/cpp/Class/: Class.cpp
tests/cpp/InternalAccessErrors/: InternalAccessErrors.cpp
tests/cpp/InvalidTokenErrors/: InvalidTokenErrors.cpp
tests/cpp/OwnedClass/: OwnedClass.cpp
tests/cpp/SingleFile/: SingleFile.cpp
tests/zrSource/Class/: Class.zrproject  MyClass.zr
(+12 files in other folders)
